--- a/apps/server/supabase/config.toml
+++ b/apps/server/supabase/config.toml
@@ -1,6 +1,6 @@
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "flowmodor-open-source"
+project_id = "flowmo-open-source"
 
 [api]
 enabled = true
