feat(mobile): setup simple widget

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -47,12 +47,14 @@
         "expo-notifications",
         {
           "sounds": [
+            "./assets/alarm.wav",
             "./assets/alarm.wav"
           ]
         }
       ],
       "./plugins/notifee-mod.js",
-      "expo-font"
+      "expo-font",
+      "@bacons/apple-targets"
     ],
     "experiments": {
       "typedRoutes": true
