feat(mobile): setup module to start and stop widget

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -12,7 +12,10 @@
     "ios": {
       "supportsTablet": true,
       "usesAppleSignIn": true,
-      "bundleIdentifier": "com.m4xshen.mobile"
+      "bundleIdentifier": "com.m4xshen.mobile",
+      "infoPlist": {
+        "NSSupportsLiveActivities": true
+      }
     },
     "android": {
       "adaptiveIcon": {
