--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,6 +22,8 @@
     "@supabase/supabase-js": "^2.47.10",
     "expo": "~52.0.37",
     "expo-apple-authentication": "~7.1.3",
+    "expo-auth-session": "~6.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.6",
