--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -43,6 +43,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-ios-context-menu": "^3.1.0",
     "react-native-ios-utilities": "^5.1.1",
+    "react-native-keyboard-controller": "^1.17.1",
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.4.0",
