feat(web): use useBreakRatio for options

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@flowmo/stores": "workspace:*",
+    "@flowmo/hooks": "workspace:*",
     "@flowmo/task-sources": "workspace:*",
     "@flowmo/utils": "workspace:*",
     "@heroui/react": "2.7.8",
