--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -23,6 +23,7 @@
     "expo": "~52.0.47",
     "expo-apple-authentication": "~7.1.3",
     "expo-auth-session": "~6.0.3",
+    "expo-build-properties": "~0.13.3",
     "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
